Edited env to use actual sql database server instead of localhost after moving code to my local machine

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,7 +1,7 @@
 #Express Server Config
 PORT=8080
-HOST=localhost
-HOST_URL=http://localhost:8080
+HOST=vSQL2019Test
+HOST_URL=http://vSQL2019Test:8080
 
 # SQL Server connection
 SQL_USER=dba_master
